Fixed color contrast issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #519f3a;
+  --main-color: #155800;
 }
 
 body {
